# PhaseGPT

./: .gitignore  .secrets.baseline  AI_CO_CREATION_DISCLOSURE.md  CITATION.cff  COMPARISON_CLI_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  FIND_REAL_PHASEGPT.md  GETTING_STARTED.md  GOVERNANCE.md  GRADIO_DASHBOARD.md  LANTERN.md  LICENSE  LM_STUDIO_EXPORT.md  LM_STUDIO_QUICKSTART.md  MAC_STUDIO_TRAINING_GUIDE.md  Makefile  NOTICE  OSF_QUICK_REF.md  OSF_SUBMISSION_GUIDE.md  PUBLICATION_COMPLETE.md  QUICKSTART.md  README.md  REPOSITORY_READY.md  REPRODUCIBILITY.md  START_HERE.md  SYNC_INSTRUCTIONS.md  TRACK_A_QUICKSTART.md  V14_CHANGELOG.md  V14_ROADMAP.md  WHATS_NEW_V15.md  environment.yml  pyproject.toml  requirements.txt  setup_git.sh
checkpoints/: README.md
config/: architecture_config.yaml  lmstudio_preset_phasegpt.json  volitional_config.yaml
configs/: baseline.yaml  phase_a_winner.yaml
data/: preferences_v14_100pairs.jsonl  train.jsonl  valid.jsonl
data_v2/: train.jsonl  valid.jsonl
data_v4/: train.jsonl  valid.jsonl
data_v4.1/: train.jsonl  valid.jsonl
data_v5.0/: train.jsonl  valid.jsonl
docs/: ANTHROPIC_GIFT_INTEGRATION.md  MASTER_SUMMARY.md  OSF_METADATA.md  PHASE_A_FINAL_REPORT.md  PHASE_GPT_ORACLE_GUIDE.md  PREREGISTRATION.md  PUBLICATION_CHECKLIST.md  QUICK_REFERENCE.md  REPOSITORY_STRUCTURE.md  TYPED_PASS_TAXONOMY.md  V15_SUMMARY.md  v1.5_INTEGRATION_GUIDE.md
exports/: LM_STUDIO_READY.md
reports/: LM_STUDIO_IMPORT_LOG.md  TROUBLESHOOTING_LM_STUDIO.md  compare_v140_vs_qwen25b.txt  compare_v140_vs_qwen25b_max768.txt
src/: data.py  (+6 more)
(+82 files in other folders)
